<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="forecastData"
            type="com.adsama.model.ForecastResponse" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/cl_forecast">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_telemetry_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_telemetry_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <View
            android:id="@+id/v_precipitation"
            android:layout_width="0dp"
            android:layout_height="74dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/cream_rounded_cornerns_bg"
            app:layout_constraintEnd_toStartOf="@id/gl_telemetry_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_precipitation"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/rainy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/v_precipitation" />

        <TextView
            android:id="@+id/tv_precipitation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/avenir_ltsd_book"
            android:text="@string/precipitation"
            android:textColor="#364A7D"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_precipitation"
            app:layout_constraintStart_toEndOf="@id/iv_precipitation"
            app:layout_constraintTop_toTopOf="@id/iv_precipitation" />

        <TextView
            android:id="@+id/tv_precipitation_actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/avenir_ltsd_roman"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:setRainInMm="@{forecastData.current.precip_mm}"
            app:layout_constraintBottom_toBottomOf="@id/v_precipitation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_precipitation"
            tools:text="1.8 mm" />

        <View
            android:id="@+id/v_wind"
            android:layout_width="0dp"
            android:layout_height="74dp"
            android:layout_marginStart="6dp"
            android:background="@drawable/cream_rounded_cornerns_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/gl_telemetry_vertical"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_wind"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/air"
            app:layout_constraintStart_toStartOf="@id/v_wind"
            app:layout_constraintTop_toTopOf="@id/v_wind" />

        <TextView
            android:id="@+id/tv_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/avenir_ltsd_book"
            android:text="@string/wind"
            android:textColor="#364A7D"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_wind"
            app:layout_constraintStart_toEndOf="@id/iv_wind"
            app:layout_constraintTop_toTopOf="@id/iv_wind" />

        <TextView
            android:id="@+id/wind_actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/avenir_ltsd_roman"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:setWindInKph="@{forecastData.current.wind_kph}"
            app:layout_constraintBottom_toBottomOf="@id/v_wind"
            app:layout_constraintStart_toStartOf="@id/v_wind"
            app:layout_constraintTop_toBottomOf="@id/iv_wind"
            tools:text="29.5 kph" />

        <TextView
            android:id="@+id/tv_wind_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/avenir_ltsd_black"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:text="@{String.valueOf(forecastData.current.wind_dir.charAt(0))}"
            app:layout_constraintBottom_toBottomOf="@id/v_wind"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/v_wind"
            tools:text="N" />

        <View
            android:id="@+id/v_uv_index"
            android:layout_width="0dp"
            android:layout_height="74dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/cream_rounded_cornerns_bg"
            app:layout_constraintEnd_toStartOf="@id/gl_telemetry_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gl_telemetry_horizontal" />

        <ImageView
            android:id="@+id/iv_uv"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/outline_wb_sunny"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/v_uv_index" />

        <TextView
            android:id="@+id/tv_uv_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/avenir_ltsd_book"
            android:text="@string/uv_index"
            android:textColor="#364A7D"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_uv"
            app:layout_constraintStart_toEndOf="@id/iv_uv"
            app:layout_constraintTop_toTopOf="@id/iv_uv" />

        <TextView
            android:id="@+id/tv_uv_index_actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/avenir_ltsd_roman"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@{String.valueOf(forecastData.current.uv)}"
            app:layout_constraintBottom_toBottomOf="@id/v_uv_index"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_uv"
            tools:text="6.0" />

        <View
            android:id="@+id/v_sun"
            android:layout_width="0dp"
            android:layout_height="74dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/cream_rounded_cornerns_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/gl_telemetry_vertical"
            app:layout_constraintTop_toBottomOf="@id/gl_telemetry_horizontal" />

        <ImageView
            android:id="@+id/iv_sun"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/sunny"
            app:layout_constraintStart_toStartOf="@id/v_sun"
            app:layout_constraintTop_toTopOf="@id/v_sun" />

        <TextView
            android:id="@+id/tv_sun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/avenir_ltsd_book"
            android:text="@string/sun"
            android:textColor="#364A7D"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_sun"
            app:layout_constraintStart_toEndOf="@id/iv_sun"
            app:layout_constraintTop_toTopOf="@id/iv_sun" />

        <ImageView
            android:id="@+id/iv_sunrise"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/sunny"
            app:layout_constraintBottom_toBottomOf="@id/v_sun"
            app:layout_constraintStart_toStartOf="@id/v_sun"
            app:layout_constraintTop_toBottomOf="@id/tv_sun" />

        <TextView
            android:id="@+id/tv_sunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/avenir_ltsd_book"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@{forecastData.forecast.forecastday.get(0).astro.sunrise}"
            app:layout_constraintBottom_toBottomOf="@id/iv_sunrise"
            app:layout_constraintStart_toEndOf="@id/iv_sunrise"
            app:layout_constraintTop_toTopOf="@id/iv_sunrise"
            tools:text="6: 04 am" />

        <ImageView
            android:id="@+id/iv_sunset"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/sunny"
            app:layout_constraintBottom_toBottomOf="@id/v_sun"
            app:layout_constraintEnd_toStartOf="@id/tv_sunset"
            app:layout_constraintTop_toBottomOf="@id/tv_sun" />

        <TextView
            android:id="@+id/tv_sunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/avenir_ltsd_book"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@{forecastData.forecast.forecastday.get(0).astro.sunset}"
            app:layout_constraintBottom_toBottomOf="@id/iv_sunrise"
            app:layout_constraintEnd_toEndOf="@id/v_sun"
            app:layout_constraintTop_toTopOf="@id/iv_sunrise"
            tools:text="6: 49 pm" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>